@@ -1,6 +1,6 @@
 ##########################################################################
 #  
-#  Copyright (c) 2011, John Haddon. All rights reserved.
+#  Copyright (c) 2011-2012, John Haddon. All rights reserved.
 #  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
@@ -43,30 +43,58 @@ import GafferUI
 QtCore = GafferUI._qtImport( "QtCore" )
 QtGui = GafferUI._qtImport( "QtGui" )
 
-## \todo Worry about colourspace (including not doing the alpha compositing in the wrong space)
+## The ColorSwatch simply displays a flat patch of colour. The colour is specified
+# in linear space, but the GafferUI.DisplayTransform is used to ensure it is correctly
+# corrected when displayed.
 class ColorSwatch( GafferUI.Widget ) :
 
 	def __init__( self, color=IECore.Color4f( 1 ), **kw ) :
 	
-		GafferUI.Widget.__init__( self, _ColorSwatch(), **kw )
+		GafferUI.Widget.__init__( self, _Checker(), **kw )
 	
-		self._qtWidget().swatchColor = color
-		
 		## \todo Should this be an option? Should it be an option for all Widgets?
 		self._qtWidget().setMinimumSize( 12, 12 )
 
+		self.__displayTransformChangedConnection = GafferUI.DisplayTransform.changedSignal().connect( Gaffer.WeakMethod( self.__displayTransformChanged ) )
+
+		self.__linearColor = color
+		self.__updateCheckerColors()
+	
+	## Colours are expected to be in linear space, and in the case of Color4fs,
+	# are /not/ expected to be premultiplied.	
 	def setColor( self, color ) :
 	
-		if color!=self._qtWidget().swatchColor :
-			self._qtWidget().swatchColor = color
-			self._qtWidget().update()
+		if color != self.__linearColor :
+			self.__linearColor = color
+			self.__updateCheckerColors()
 		
 	def getColor( self ) :
 	
-		return self._qtWidget().swatchColor
+		return self.__linearColor
 	
-# Private implementation - a QWidget derived class which does the drawing
-class _ColorSwatch( QtGui.QWidget ) :
+	def __updateCheckerColors( self ) :
+	
+		displayTransform = GafferUI.DisplayTransform.get()
+		
+		if self.__linearColor.dimensions()==3 :
+			displayColor = self._qtColor( displayTransform( self.__linearColor ) )
+			self._qtWidget().color0 = self._qtWidget().color1 = displayColor
+		else :
+			c = self.__linearColor
+			color0 = IECore.Color3f( 0.1 ) * ( 1.0 - c.a ) + IECore.Color3f( c.r, c.g, c.b ) * c.a
+			color1 = IECore.Color3f( 0.2 ) * ( 1.0 - c.a ) + IECore.Color3f( c.r, c.g, c.b ) * c.a
+			self._qtWidget().color0 = self._qtColor( displayTransform( color0 ) )
+			self._qtWidget().color1 = self._qtColor( displayTransform( color1 ) )
+
+		self._qtWidget().update()
+	
+	def __displayTransformChanged( self ) :
+	
+		self.__updateCheckerColors()
+	
+# Private implementation - a QWidget derived class which just draws a checker with
+# no knowledge of colour spaces or anything.
+class _Checker( QtGui.QWidget ) :
 
 	def __init__( self ) :
 	
@@ -77,24 +105,22 @@ class _ColorSwatch( QtGui.QWidget ) :
 		painter = QtGui.QPainter( self )
 		rect = event.rect()
 		
-		# draw checkerboard background if necessary
-		if self.swatchColor.dimensions()==4 and self.swatchColor.a < 1 :
+		if self.color0 != self.color1 :
 			
+			# draw checkerboard if colours differ
 			checkSize = 6
 						
 			min = IECore.V2i( rect.x() / checkSize, rect.y() / checkSize )
-			max = IECore.V2i( (rect.x() + rect.width()) / checkSize, (rect.y() + rect.height()) / checkSize )
-			
-			checkColor = QtGui.QColor( 100, 100, 100 )
-			
+			max = IECore.V2i( 1 + (rect.x() + rect.width()) / checkSize, 1 + (rect.y() + rect.height()) / checkSize )
+						
 			for x in range( min.x, max.x ) :
 				for y in range( min.y, max.y ) :
 					if ( x + y ) % 2 :
-						painter.fillRect( QtCore.QRectF( x * checkSize, y * checkSize, checkSize, checkSize ), checkColor )
-
-		# draw colour
+						painter.fillRect( QtCore.QRectF( x * checkSize, y * checkSize, checkSize, checkSize ), self.color0 )
+					else :
+						painter.fillRect( QtCore.QRectF( x * checkSize, y * checkSize, checkSize, checkSize ), self.color1 )
+						
+		else :
 		
-		qColor = GafferUI.Widget._qtColor( self.swatchColor )
-		if self.swatchColor.dimensions()==4 :
-			qColor.setAlphaF( self.swatchColor.a )
-		painter.fillRect( QtCore.QRectF( rect.x(), rect.y(), rect.x() + rect.width(), rect.y() + rect.height() ), qColor )
+			# otherwise just draw a flat colour cos it'll be quicker
+			painter.fillRect( QtCore.QRectF( rect.x(), rect.y(), rect.x() + rect.width(), rect.y() + rect.height() ), self.color0 )
