@@ -588,7 +588,8 @@ class Widget( object ) :
 			
 		return GafferUI.ModifiableEvent.Modifiers( modifiers )
 	
-	## Converts an IECore.Color[34]f to a QtColor
+	## Converts an IECore.Color[34]f to a QtColor. Note that this
+	# does not take into account GafferUI.DisplayTransform.
 	@staticmethod
 	def _qtColor( color ) :
 	
